--- a/TCC_Sistema_Supervisorio/Sistema Supervisorio/packages.config
+++ b/TCC_Sistema_Supervisorio/Sistema Supervisorio/packages.config
@@ -5,4 +5,5 @@
   <package id="LiveCharts.Geared" version="1.2.8.2" targetFramework="net452" />
   <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net452" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
 </packages>
